--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ black = "^24.10.0"
 pillow = "^11.0.0"
 psycopg2-binary = "^2.9.10"
 ipython = "^8.29.0"
+django-pagination = "^1.0.7"
 
 
 [build-system]
